Fix top margin for projects and collapse nav bar on click

--- a/css/common-style.css
+++ b/css/common-style.css
@@ -31,6 +31,7 @@ html {
     font: normal 600 3.15rem var(--raleway);
     text-transform: uppercase;
     color: black;
+    margin-top: 3rem;
 }
 
 .white-font {
